syntax = "proto3";

package mizer.effects;

import "fixtures.proto";
import "sequencer.proto";

service EffectsApi {
  rpc GetEffects (GetEffectsRequest) returns (Effects) {}
}

message GetEffectsRequest {}

message Effects {
  repeated Effect effects = 1;
}

message Effect {
  uint32 id = 1;
  string name = 2;
  repeated EffectChannel channels = 3;
}

message EffectChannel {
  mizer.fixtures.FixtureControl control = 1;
  repeated EffectStep steps = 2;
}

message EffectStep {
  mizer.sequencer.CueValue value = 1;
  oneof control_point {
    SimpleControlPoint simple = 2;
    QuadraticControlPoint quadratic = 3;
    CubicControlPoint cubic = 4;
  }
}

message SimpleControlPoint {
}

message QuadraticControlPoint {
  double c0a = 1;
  double c0b = 2;
}

message CubicControlPoint {
  double c0a = 1;
  double c0b = 2;
  double c1a = 3;
  double c1b = 4;
}
